Fix FSE Navigation Menu width when alignwide or alignfull

--- a/varia/sass/full-site-editing/_editor.scss
+++ b/varia/sass/full-site-editing/_editor.scss
@@ -40,6 +40,10 @@
 	.main-navigation {
 		text-align: center;
 
+		.alignwide, .alignfull {
+			width: 100%;
+		}
+
 		@import "../base/extends";
 		.button {
 			@extend %button-style
