--- a/varia/sass/full-site-editing/_imports.scss
+++ b/varia/sass/full-site-editing/_imports.scss
@@ -3,6 +3,10 @@
 	margin-top: 0;
 
 	.main-navigation {
+		.alignwide, .alignfull {
+			width: 100%;
+		}
+
 		.has-text-color > .main-menu.footer-menu > li > a {
 			color: inherit;
 		}
